--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -8,6 +8,8 @@ rem is used for sizing as it's better for screen readers.  1 rem = 16 pixels.  F
 font-size of all html to be 62.5% since 62.5% of 16 pixels = 10 pixels.
 
 Conventionally we use alphabetical order, so background comes before font-family
+
+cursor: pointer shows up as a little hand icon
 */
 html {
   font-size: 62.5%;
@@ -16,4 +18,12 @@ body {
   background: $dark-blue;
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
+}
+
+button {
+  cursor: pointer;
+}
+
+button:disabled {
+  cursor: default;
 }
