--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,8 +3,10 @@
 $off-black: #20222b;
 $off-lilac: #a5afd7;
 $dark-blue: #333745;
+$purple: #8357c5;
 
 //Spacing and sizes
+$s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
