--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -2,7 +2,9 @@
 
 $off-black: #20222b;
 $off-lilac: #a5afd7;
-$dark-blue: #333745;
+$dark-blue: #333766;
+$blue: #3c4266;
+$light-blue: #8eafff;
 $purple: #8357c5;
 
 //Spacing and sizes
