Use @media to conditionally style space around 'What should I do?'

--- a/src/styles/components/_add-option.scss
+++ b/src/styles/components/_add-option.scss
@@ -25,7 +25,7 @@
 }
 
 // When screen width is 45rem or greater, display elements side-by-side
-@media (min-width: $bigscreen-breakpoint){
+@media (min-width: $bigscreen){
   .add-option {
     flex-direction: row;
   }
